# TypoSniffer

./: .gitignore  LICENSE  README.md  nameservers.txt  pyproject.toml  tdl.txt
.github/workflows/: build_poetry.yml
alembic/: env.py
alembic/versions/: 49e828d74f31_add_unique_constraint_to_domain_name.py  9c9f8e2dde3a_add_added_date_column_to_suspicious_domain.py
src/typosniffer/: __init__.py  cli.py
src/typosniffer/cli/: cli.py  config.py  discovery.py  domain.py  fuzzing.py  monitor.py  record.py  scan.py  sniff.py  sus_domain.py  test.py  tools.py
src/typosniffer/config/: config.py
src/typosniffer/data/: database.py  dto.py  service.py  tables.py
src/typosniffer/fuzzing/: fuzzer.py
src/typosniffer/resources/: default.yaml  email.html.j2
src/typosniffer/resources/template/: discovery.html.j2  email.html.j2  inspection.html.j2
src/typosniffer/service/: domain.py  suspicious_domain.py  website_record.py
src/typosniffer/sniffing/: cnn.py  fuzzer.py  monitor.py  notification.py  sniffer.py  tf_idf.py  whoisds.py  whoisfinder.py
src/typosniffer/utils/: click_utility.py  console.py  email.py  exceptions.py  imgbb.py  logger.py  request.py  utility.py
src/typosniffer/whoisds/: whoisds.py
